--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+
 python:
   - 2.7_with_system_site_packages
   - 3.5
@@ -9,10 +10,11 @@ addons:
         repo_token: f036bdb9e3a0c035861c5ce50e970dba2adc01692f17c90fc36a7cf64a5fc66a
 
 before_install: sudo apt-get install -qq python-numpy python-scipy
+
 install:
   - pip install -r requirements.txt
   - pip install pytest pytest-cov pylama codeclimate-test-reporter
 
-script: python -m pytest --cov=luminol/ tests/
+before_script: python -m pylama -i E501 luminol/ || true
 
-after_script: python -m pylama -i E501 luminol/ || true
+script: python -m pytest --cov=luminol/ tests/
