--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ addons:
 before_install: sudo apt-get install -qq python-numpy python-scipy
 install:
   - pip install -r requirements.txt
-  - pip install pytest pylama coverage codeclimate-test-reporter
+  - pip install pylama pytest pytest-cov codeclimate-test-reporter
 before_script: python -m pylama -i E501 luminol/ || true
 
-script: python -m coverage run --source=luminol pytest tests/
+script:
+  - python -m pytest --cov=luminol/ tests/
+  - codeclimate-test-reporter --file .coverage
