--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,18 @@
+engines:
+  rubocop:
+    enabled: true
+    #checks:
+    #	Rubocop/Metrics/ClassLength:
+    #  	enabled: false
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - python
+ratings:
+  paths:
+  - luminol/**
+  - "**.py"
 exclude_paths:
-- "tests/"
 - "demo/"
+- "tests/"
